Fix input width bug, was breaking page x scroll on small mobile

--- a/src/components/SubmittableInput.css
+++ b/src/components/SubmittableInput.css
@@ -20,6 +20,7 @@
 }
 .SubmittableInput input.SubmittableInput--Limited {
   padding-right: 60px;
+  width: calc(100% - 70px);
 }
 .SubmittableInput-CharacterLimit {
   bottom: 25px;
